--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@wdio/selenium-standalone-service": "^8.1.2",
     "@wdio/spec-reporter": "^8.1.2",
     "allure-commandline": "^2.20.1",
+    "chromedriver": "latest",
     "eslint": "^8.31.0",
     "eslint-config-standard": "^17.0.0",
     "eslint-plugin-import": "^2.26.0",
@@ -61,6 +62,8 @@
   },
   "dependencies": {
     "@wdio/codemod": "^0.12.0",
-    "jscodeshift": "^0.14.0"
+    "jscodeshift": "^0.14.0",
+    "log4js": "^6.9.1",
+    "winston": "^3.10.0"
   }
 }
